tests/shouldFail/j310a.c
int foo();

int main(void){
	foo(5);
}

int foo(double a){
	return 0;
}
